# new_tbn_engine

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  shell.html
deploy-web/: app.js  app.wasm
sources/: box_geometry.cxx  box_geometry.hxx  canvas.cxx  canvas.hxx  entity.cxx  entity.hxx  geometry_base.cxx  geometry_base.hxx  log.cxx  log.hxx  main.cxx  object.cxx  object.hxx  object_base.cxx  scene.cxx  scene.hxx  shader_info.hxx  surface.cxx  surface.hxx  swapchain.cxx  swapchain.hxx  texture_blitter.cxx  texture_blitter.hxx  utils.hxx
sources/camera/: base.cxx  base.hxx  orthographic.cxx  orthographic.hxx  perspective.cxx  perspective.hxx
sources/geometry/: base.cxx  base.hxx  box.cxx  box.hxx  model.hxx
sources/material/: base.cxx  base.hxx  color.cxx  color.hxx  uv_debug.cxx  uv_debug.hxx
